[package]
name = "xbee"
version = "0.1.0"
authors = ["David Scravaglieri <david@scravaglieri.net>"]

[dependencies]
clippy = "0.0.48"
libc="0.2.8"
va_list = "0.0.3"

[lib]
# This field points at where the crate is located, relative to the Cargo.toml.
path = "src/xbee.rs"

# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true

# A flag for enabling documentation tests for this target. This is only
# relevant for libraries, it has no effect on other sections. This is used by
# `cargo test`.
doctest = true

# A flag for enabling benchmarks for this target. This is used by `cargo bench`.
bench = true

# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

# If the target is meant to be a compiler plugin, this field must be set to true
# for Cargo to correctly compile it and make it available for all dependencies.
plugin = false

# If set to false, `cargo test` will omit the --test flag to rustc, which stops
# it from generating a test harness. This is useful when the binary being built
# manages the test runner itself.
harness = true